update go.mod
